--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,19 +14,52 @@ services:
       - db
     ports:
       - "3000:3000"
-    env_file:
-      - .env
+    secrets:
+      - db_user
+      - db_password
+      - db_name
+      - db_host
 
   db:
     image: postgres
     container_name: db
-    environment:
-      - POSTGRES_USER=${POSTGRES_USER}
-      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
-      - POSTGRES_DB=${POSTGRES_DB}
     ports:
       - '5432:5432'
-    volumes:
-      - ./db/database.sql:/docker-entrypoint-initdb.d/create_db.sql
-    env_file:
-      - .env
+    environment:
+      - POSTGRES_USER=/run/secrets/db_user
+      - POSTGRES_PASSWORD=/run/secrets/db_password
+      - POSTGRES_DB=/run/secrets/db_name
+      - POSTGRES_PORT=5432
+      - USER_NAME_ADMIN=/run/secrets/user_name_admin
+      - USER_PWD_ADMIN=/run/secrets/user_pwd_admin
+      - USER_NAME_GRG=/run/secrets/user_name_grg
+      - USER_PWD_GRG=/run/secrets/user_pwd_grg
+    secrets:
+      - db_user
+      - db_password
+      - db_name
+      - db_host
+      - user_name_admin
+      - user_pwd_admin
+      - user_name_grg
+      - user_pwd_grg
+
+secrets:
+  db_user:
+    external: true
+  db_password:
+    external: true
+  db_name:
+    external: true
+  db_host:
+    external: true
+  db_port:
+    external: true
+  user_name_admin:
+    external: true
+  user_pwd_admin:
+    external: true
+  user_name_grg:
+    external: true
+  user_pwd_grg:
+    external: true
