--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,6 +19,10 @@ services:
       - db_password
       - db_name
       - db_host
+      - user_name_admin
+      - user_pwd_admin
+      - user_name_grg
+      - user_pwd_grg
 
   db:
     image: postgres
@@ -29,11 +33,8 @@ services:
       - POSTGRES_USER=/run/secrets/db_user
       - POSTGRES_PASSWORD=/run/secrets/db_password
       - POSTGRES_DB=/run/secrets/db_name
+      - POSTGRES_HOST=/run/secrets/db_host
       - POSTGRES_PORT=5432
-      - USER_NAME_ADMIN=/run/secrets/user_name_admin
-      - USER_PWD_ADMIN=/run/secrets/user_pwd_admin
-      - USER_NAME_GRG=/run/secrets/user_name_grg
-      - USER_PWD_GRG=/run/secrets/user_pwd_grg
     secrets:
       - db_user
       - db_password
