--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,5 @@
-version: "3.7"
-
 services:
+
   frontend:
     build: ./frontend
     container_name: frontend
@@ -16,19 +15,14 @@ services:
       - db
     ports:
       - "3000:3000"
-    env_file:
-      - .env
 
   db:
     image: postgres
     container_name: db
     environment:
-      - POSTGRES_USER=${POSTGRES_USER}
-      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
-      - POSTGRES_DB=${POSTGRES_DB}
+      - POSTGRES_USER=postgres
+      - POSTGRES_PASSWORD=postgres
     ports:
       - '5432:5432'
     volumes:
       - ./db/database.sql:/docker-entrypoint-initdb.d/create_db.sql
-    env_file:
-      - .env
